// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocationAutocomplete/> that renders a location search field should not display powerByGoogle logo if hidePoweredByGoogleLogo set to true 1`] = `
<div>
  <div
    class="SelectBase"
    iconnode="[object Object]"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-7-label"
              autocomplete="off"
              class="Autosuggest__input Autosuggest__input--hidden"
              data-lpignore="true"
              placeholder=""
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-7-label"
            class="List"
            id="downshift-7-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LocationAutocomplete/> that renders a location search field should render with minimal props 1`] = `
<div>
  <div
    class="SelectBase"
    iconnode="[object Object]"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="Autosuggest__input Autosuggest__input--hidden"
              data-lpignore="true"
              placeholder=""
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
